Use dynamic filepaths instead of hardcoded filepaths